# TelegramFowardBot

./: .gitignore  README.md  README_zh-CN.md  config.py  main.py  pyproject.toml  run.sh
.cursor/docs/: architecture_plan.md
.cursor/rules/: code_examples.mdc  project_structure.mdc
bot/: app.py  main.py
bot/handlers/: __init__.py  auth.py  manage.py  rules.py
database/: manager.py
user_clients/: handlers.py  manager.py
